// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render Spacer 1`] = `
<div
  class="components-flex wp-components-flex components-h-stack wp-components-h-stack components-v-stack wp-components-v-stack css-1hg1b43"
  data-g2-c16t="true"
  data-g2-component="VStack"
>
  <div
    class="css-j1yu9m"
  />
  <div
    class="components-flex-item wp-components-flex-item css-zkdzda"
    data-g2-c16t="true"
    data-g2-component="Spacer"
  />
  <div
    class="css-j1yu9m"
  />
</div>
`;

exports[`props should render alignment 1`] = `
<div
  class="components-flex wp-components-flex components-h-stack wp-components-h-stack components-v-stack wp-components-v-stack css-jo75ce"
  data-g2-c16t="true"
  data-g2-component="VStack"
>
  <div
    class="css-j1yu9m"
  />
  <div
    class="css-j1yu9m"
  />
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="components-flex wp-components-flex components-h-stack wp-components-h-stack components-v-stack wp-components-v-stack css-111mesx"
  data-g2-c16t="true"
  data-g2-component="VStack"
>
  <div
    class="css-j1yu9m"
  />
  <div
    class="css-j1yu9m"
  />
</div>
`;

exports[`props should render spacing 1`] = `
<div
  class="components-flex wp-components-flex components-h-stack wp-components-h-stack components-v-stack wp-components-v-stack css-1hg1b43"
  data-g2-c16t="true"
  data-g2-component="VStack"
>
  <div
    class="css-j1yu9m"
  />
  <div
    class="css-j1yu9m"
  />
</div>
`;
